finishes implementation of diff window and tab

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -23,8 +23,8 @@
     -->
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow id="MyToolWindow" anchor="bottom"
-                    factoryClass="MyToolWindowFactory"/>
+        <toolWindow id="DiffToolWindow" anchor="bottom"
+                    factoryClass="DiffToolWindowFactory"/>
     </extensions>
 
     <actions>
