--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.intellij' version '0.3.1'
+    id 'io.franzbecker.gradle-lombok' version '1.13'
 }
 
 group 'edu.ucsd'
@@ -20,6 +21,7 @@ dependencies {
 intellij {
     version '2018.1.1'
 }
+
 patchPluginXml {
     changeNotes """
       Add change notes here.<br>
