--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,13 +24,13 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow id="DiffToolWindow" anchor="bottom"
-                    factoryClass="DiffToolWindowFactory"/>
+                    factoryClass="edu.ucsd.diff.DiffToolWindowFactory"/>
     </extensions>
 
     <actions>
         <group id="MyPlugin.SampleMenu" text="Greeting" description="Greeting menu">
             <add-to-group group-id="MainMenu" anchor="last"/>
-            <action id="Myplugin.Textboxes" class="HelloAction" text="Hello" description="Says hello"/>
+            <action id="Myplugin.Textboxes" class="edu.ucsd.HelloAction" text="Hello" description="Says hello"/>
         </group>
     </actions>
 
