--- a/src/test/resources/log4j-test.properties
+++ b/src/test/resources/log4j-test.properties
@@ -9,6 +9,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # use a simple message format
 log4j.appender.stdout.layout.ConversionPattern=%m%n
+#log4j.appender.stdout.layout.ConversionPattern=%p\t%d{ISO8601}\t%r\t%c\t[%t]\t%m%n
 
 # add a FileAppender to the logger fout
 log4j.appender.fout=org.apache.log4j.FileAppender
