--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.12'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
