adds fileWriter for priorities

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,7 +36,7 @@
     <actions>
         <group id="DiffWindow.Menu" text="DiffWindow" description="Actions for the DiffWindow">
             <add-to-group group-id="MainMenu" anchor="last"/>
-            <action class="edu.ucsd.ReInferAction" id="DiffWindow.ReInfer" text="Re-infer"
+            <action class="edu.ucsd.reinfer.ReInferAction" id="DiffWindow.ReInfer" text="Re-infer"
                     description="Re-infer invariants" icon="/icons/refresh.png"/>
         </group>
     </actions>
