--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.12'
+    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
     testCompile group: 'org.jmockit', name: 'jmockit', version: '1.39'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
