--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ plugins {
 //    id 'org.jetbrains.intellij' version '0.3.1'
 //    id 'io.franzbecker.gradle-lombok' version '1.13'
     id 'org.jetbrains.intellij' version '0.4.3'
-    id 'io.franzbecker.gradle-lombok' version '2.1'
+    //id 'io.franzbecker.gradle-lombok' version '2.1'
+    id "io.freefair.lombok" version "4.1.5"
     id 'java'
     id "org.jetbrains.kotlin.jvm" version "1.3.11"
 }
@@ -32,6 +33,9 @@ dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     testCompile group: 'org.jmockit', name: 'jmockit', version: '1.39'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compileOnly "org.projectlombok:lombok:1.18.10"
+    annotationProcessor "org.projectlombok:lombok:1.18.10"
 }
 
 intellij {
