--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,8 @@
 plugins {
-//    id 'org.jetbrains.intellij' version '0.3.1'
-//    id 'io.franzbecker.gradle-lombok' version '1.13'
-    id 'org.jetbrains.intellij' version '0.4.3'
-    //id 'io.franzbecker.gradle-lombok' version '2.1'
-    id "io.freefair.lombok" version "4.1.5"
     id 'java'
-    id "org.jetbrains.kotlin.jvm" version "1.3.11"
+    id 'org.jetbrains.intellij' version '0.4.16'
+    id "io.freefair.lombok" version "4.1.5"
+    id "org.jetbrains.kotlin.jvm" version "1.3.61"
 }
 
 group 'edu.ucsd'
@@ -39,12 +36,12 @@ dependencies {
 }
 
 intellij {
-    version '2018.3.4'
+    version '2019.3.3'
     sandboxDirectory = "$project.buildDir/myCustom-sandbox"
-    plugins 'gradle'
+    plugins 'java','properties','gradle'
 }
 tasks.wrapper {
-    gradleVersion = 5.2
+    gradleVersion = "6.1.1"
 }
 patchPluginXml {
     changeNotes """
