--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.16'
-    id "io.freefair.lombok" version "4.1.5"
-    id "org.jetbrains.kotlin.jvm" version "1.3.61"
+    id 'org.jetbrains.intellij' version '0.7.2'
+    id "io.freefair.lombok" version "5.3.3.3"
+    id "org.jetbrains.kotlin.jvm" version "1.4.32"
 }
 
 group 'edu.ucsd'
@@ -19,31 +19,35 @@ repositories {
 }
 
 dependencies {
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
-    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.12'
-    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
-    compile group: 'com.github.fracpete', name: 'rsync4j-all', version:'3.1.2-9'
-    //compile(group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.11.0.201803080745-r') {
-    compile(group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.2.0.201812061821-r') {
+    //implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.12'
+    implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+    implementation group: 'com.github.fracpete', name: 'rsync4j-all', version:'3.1.2-9'
+    implementation(group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.2.0.201812061821-r') {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    testCompile group: 'org.jmockit', name: 'jmockit', version: '1.39'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.4.32'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    testImplementation group: 'org.jmockit', name: 'jmockit', version: '1.39'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 
-    compileOnly "org.projectlombok:lombok:1.18.10"
-    annotationProcessor "org.projectlombok:lombok:1.18.10"
+    compileOnly "org.projectlombok:lombok:1.18.20"
+    annotationProcessor "org.projectlombok:lombok:1.18.20"
 }
 
 intellij {
     version '2019.3.3'
-    sandboxDirectory = "$project.buildDir/myCustom-sandbox"
-    plugins 'java','properties','gradle'
+    pluginName = 'Invariants Diff'
+    sandboxDirectory = "$project.buildDir/my-sandbox"
+    plugins = ["com.intellij.gradle",
+               "com.intellij.java",
+               "properties"]
 }
 tasks.wrapper {
-    gradleVersion = "6.1.1"
+    gradleVersion = "6.8.3"
 }
 patchPluginXml {
+    version "0.1.1"
     changeNotes """
       Add change notes here.<br>
       <em>most HTML tags may be used</em>"""
